tests/invalid/type/literal_byte_256.pts
function main() : void {
    byte b = 256;
}
